# multi-robot-parcel-sorting-and-bin-assignment

./: CMakeLists.txt  ORCA.cpp  benchmark.cpp  benchmark.h  custom_astar.h  ddm.cpp  ddm.h  drp.cpp  drp.h  ecbs.h  ecbs_customized.h  ecbs_lifelong.h  ecbs_utils.h  edrp.cpp  edrp.h  main.cpp  make_plot_multi_goal.py  search_utils.h  suo.h  task.h  test.cpp  test_ortools.cpp  utils.h
libMultiRobotPlanning/include/libMultiRobotPlanning/: a_star.hpp  a_star_epsilon.hpp  assignment.hpp  cbs.hpp  cbs_ta.hpp  ecbs.hpp  ecbs_ta.hpp  neighbor.hpp  next_best_assignment.hpp  planresult.hpp  sipp.hpp
python/: common.py  generate_settings.py  genetic.c  genetic.json  genetici.c  genetici.pyx  greedy.json  greedy.py  greedyi.c  greedyi.pyx  huge_genetic.json  hungarian.json  hungarian_setting.txt  large_genetic.json  large_random.json  main.py  mip.json  mip.py  prob.txt  random.json  random_assign.py  settings.py  setup.py
python/plot/: plot_data.py
python/settings/: huge_type_200.txt  hungaruan_setting.txt  large_type_100.txt  type_10.txt  type_20.txt  type_30.txt  type_36.txt
